Fix wrapping formatting

--- a/src/ArticleSelector.css
+++ b/src/ArticleSelector.css
@@ -60,3 +60,6 @@
     .article-content-container p {
         line-height: 1.5rem;
     }
+    .article-content-container code {
+        white-space: nowrap;
+    }
